fix code block dark mode

--- a/asset/revamp/styles/scss/components/_content-darkmode.scss
+++ b/asset/revamp/styles/scss/components/_content-darkmode.scss
@@ -121,6 +121,10 @@
                       background: $bg-table-dark;
                       color: $white;
                     }
+
+                    .hljs-string {
+                      color: rgb(255 203 107 / 89%);
+                    }
                   } 
 
                   &:first-child {
@@ -129,6 +133,13 @@
                       display: block;
                     }
                   }
+
+                  .string {
+                    .hljs-string {
+                      color: rgb(255 203 107 / 89%);
+                    }
+                  }
+
                 }
               }
             }
